[tool.poetry]
name = "pdf-mermaid-munger"
version = "0.1.0"
description = "Turns markdown with mermaid diagrams into PDFs"
authors = ["Manuel Gomes <mane.gomes@gmail.com>"]
readme = "README.md"
packages = [{ include = "pdf_mermaid_munger" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pdfkit = "^1.0.0"
beautifulsoup4 = "^4.12.2"
markdown = "^3.5"
rich = "^13.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
